<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_study">

    <fragment
        android:id="@+id/nav_study"
        android:name="net.android.workStudy.fragment.StudyFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_study" />
    <fragment
        android:id="@+id/nav_translate"
        android:name="net.android.workStudy.fragment.TranslateFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_translate" />
    <fragment
        android:id="@+id/nav_grade"
        android:name="net.android.workStudy.fragment.GradeFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_grade" />
    <fragment
        android:id="@+id/nav_set"
        android:name="net.android.workStudy.fragment.SettingFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_grade" />

</navigation>